# datastructures

./: .gitignore  LICENSE  README.md  setup.cfg
analysis/: main.py
codes/: sortingcode.py
data/: createarray.py
src/datastructure/: createarray.py  sorting.py  sortingcode.py
