[metadata]
name = Sorting Algorithms
version = v0.0.1
description = A comparison of Sorting Algorithms
url = https://github.com/adiitya-dey/datastructures
author = Aditya Dey
author-email = adiitya.dey@gmail.com
license = MIT license
keywords = Sorting, Sorting Algorithms, Time Complexity, Insert Sort, Bubble Sort
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Education
    Programming Language :: Python :: 3.9
    


[options]
packages = datastructure 
package-dir =
    = src
install_requires = 
    numpy >= 1.21.3
    pandas >= 1.3.4
    matplotlib >=3.4.3
[flake-8]
max-line-length = 100